[gd_scene load_steps=3 format=3 uid="uid://csjakg7hsjx1n"]

[ext_resource type="Script" path="res://Scripts/AggroSystem.gd" id="1_215b7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jsy0c"]
height = 20.0

[node name="AggroSystem" type="Area3D"]
collision_layer = 0
collision_mask = 30
monitorable = false
script = ExtResource("1_215b7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_jsy0c")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
